=== 24 July 2006
* Initial import of code written 23 July.
* Adding LICENSE, README, CHANGELOG files.